* ViewLayer::ViewAt() must not use the screen clipping to find the view   in question as it used to find the view that is under the mouse (found   during a short phone session with stippi :-)). This fixes bug #1714. * The local view clipping is still not correctly maintained by the   app_server, but that only affects the drawing now. I've added some   commented out code that give you some visual feedback on this problem   (ViewLayer::MarkAt()). * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23663 a95241bf-73f2-0310-859d-f6bbb57e9c96